fix body overflow

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -8,6 +8,7 @@ html{
 }
 html,body{
   margin:0;
+  overflow-x:hidden !important;
   }
 body.open{
   overflow: hidden;
@@ -31,10 +32,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
     font-size: $normal-size;
     // background: $offWhite;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   height: 100%;
 
   font-family: "Roboto", sans-serif;
+  
   }
   
   code {
